recursion.lessons.recursion.koch.Koch.scala.error
Koch:17: error: reassignment to val
		length = length/3;
                       ^Koch:18: error: not found: value angle
		angle=360/3;
                ^Koch:21: error: not found: value angle
		gauche(angle);
                       ^Koch:24: error: not found: value angle
		droite(2*angle);
                         ^Koch:27: error: not found: value angle
		gauche(angle);
                       ^